# axumtmxkama

./: Cargo.toml  README.md  build.rs
src/: main.rs  telemetry.rs
templates/: clicked.html  hello.html  index.html
